// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create an InputCell 1`] = `
<input
  className="cell-input"
  onChange={[Function]}
  value="1"
/>
`;

exports[`Create an empty InputCell 1`] = `
<input
  className="cell-input"
  onChange={[Function]}
  value={undefined}
/>
`;
